# keyhuntM1CPU

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  VASTAI_GUIDE.md  bsgsd  bsgsd.cpp  hashing.c  hashing.h  keyhunt.cpp  keyhunt_legacy.cpp  util.c  util.h  vastai_deploy.sh  vcpkg.json
.github/: Dockerfile.arm64
.github/workflows/: build.yml
benchmarks/: benchmark_main.cpp
bloom/: bloom.cpp
cuda/: bsgs_kernel.cu  secp256k1.cuh
hash/: ripemd160.cpp  ripemd160.h  ripemd160_neon.cpp  sha256.cpp  sha256.h  sha256_neon.cpp  sha512.cpp
include/keyhunt/: config.h  platform.h
include/keyhunt/core/: apple_qos.h  bloom_filter.h  bsgs.h  config.h  dashboard.h  distributed.h  error.h  logger.h  memory.h  security.h  simd.h  thread_pool.h  types.h
secp256k1/: Int.cpp  Int.h  IntMod.cpp  Random.cpp
sha3/: sha3.h
tests/: 71.txt  test_bloom_filter.cpp  test_main.cpp  test_memory.cpp  test_thread_pool.cpp  test_types.cpp
